ドキュメント整備中

--- a/src/test/Act1/第一章 仮実装.md
+++ b/src/test/Act1/第一章 仮実装.md
@@ -2,7 +2,7 @@
 
 0→1でものを作る際（作りたいものが曖昧）は、仮実装をすべき。
 
-## 仮実装のサイクル
+## 実装のサイクル
 
 1. 小さいテストを一つ書く
 2. 全てのテストを実行し、一つ失敗することを確認
@@ -12,8 +12,17 @@
 
 ## 重複とは？
 
-重複はサイクルの3項で生まれる。
+重複は同じ内容という意味だけでなく、無意味な記述やリファクタリング対象全体を含んでいる。
+結論クソコード＝重複
 
 e.g.) 
 multiplyメソッドがあるのに変数に倍にした後の値をベタ打ちしている
 
+## この章でやったこと
+
+- 書くべきテストのリスト（todoリスト）を作った
+- どうなったら嬉しいかを小さいテストで表現した
+- 空実装でコンパイルは通した
+- 重複を許容したコードでテストを通した
+- 動くコードを共通化し、ベタ書きの値を変数に変えた
+- Todoリストにやりたいことを追加するに留め、無闇に手を出さなかった。
