--- a/src/test/Act2/第二章 明白な実装.md
+++ b/src/test/Act2/第二章 明白な実装.md
@@ -3,3 +3,44 @@
 作るものが明確な場合は実装から作ってテストするでも良い。
 
 適切なのは仮実装と明白な実装を行き来すること。
+
+## 一般的なTDDのサイクル
+
+- テストを書く
+  - あなたの想像する操作がどんなコードになるか考える
+  - ほしいと思うインターフェースを創造する
+  - 正しい答えを導くために必要な要素を全て盛り込む
+- 動かす
+  - 状態をグリーンにする
+  - きれいでシンプルな解があるならその通りに
+  - 複雑なら一旦Todoリストに
+    - とりあえずテストだけ通す（罪を犯す）
+  - 「なんでもいいからとにかく動かす」
+    - 受け入れがたいかもしれないが、素早いグリーンは全ての罪を許す（短期間において）
+- 正しくする
+  - 動く罪深いコードから重複を除去して再度「動かす」
+
+概要にも書いたが、最も重要なのは*動作するきれいなコード*である。
+より詳しく言うならば、最初に「動作した」上で「きれいにした」コードである。（TDDサイクルと同じ順番）
+
+## 明白な実装の例外
+
+明白に実装ができるならば、すぐに頭の中の実装をコードにしてもいい。
+（仮実装のような小さな一歩だけでは能率が悪いので）
+
+## 感情をテストに翻訳する
+
+TDDの大きなテーマの一つ
+
+不快なコード（分かりづらい、不親切、間違いに気づきにくい、無意味に複雑）を見つけたら
+鬱憤を晴らすように細かいテストを書く。
+
+- 不快なコードに対する嗅覚は価値観をテストに翻訳する腕を上達させる（設計に関する議論をより深くする）
+  - システムはどう振る舞うべきか？ 
+  - 振る舞いを実現するための最善の方法は？
+
+## やったこと
+
+- 設計の問題点をテストコードに写し取り、その問題のせいでテストが失敗することを確認
+- 空実装でコンパイルを通した
+- 明白な実装をすぐに行い、テストを通した。
