--- a/src/test/Act3/第三章 三角測量.md
+++ b/src/test/Act3/第三章 三角測量.md
@@ -1,4 +1,38 @@
 # 三角測量
 
-設計のアイデアが浮かばないとき、一つの条件ではテストの正確性を担保できないときに複数のテストを書く。
+## 三角測量とは？
+一番平易な説明↓　概念としては中学ぐらいで習うやつです。
 
+https://www.kurabo.co.jp/el/room/3d/page1.html
+
+今回は、複数のテストを通して正しさを担保することを三角測量と呼んでいる。
+
+## Value Objectとは？
+
+- オブジェクトを値として使うこと。
+  - ルール：コンストラクタで設定してインスタンス変数の値が変わってはならない
+  - メリット：別名参照を気にしなくて良い。（複数同じクラスを呼び出しても中身はそれぞれで保持する）
+- ValueObjectを担保するためにはequalsメソッドが必要
+  - 5ドルオブジェクトと5ドルオブジェクトが同じ価値であると認識されるべき。
+- hashcodeも場合によって必要
+  - ハッシュテーブルのキーとして利用する場合
+- オブジェクトの同一性について詳しくはこちら https://qiita.com/yachinco/items/b1a3602d6aa261f5f7c4
+
+
+## 実際のテスト
+
+書籍内ではValue Objectの等価性比較のために三角測量的なテストを用いている。
+
+はじめに5 == 5が正しいか？というテストを作ったが、全ての入力に対して正しいと返すコードであった場合、\
+これだけでは不十分である。
+
+5 == 6はfalseか？を確認する別のテストを作ることで等価性比較の正しさを担保した。
+
+
+## やったこと
+
+- value objectパターンを満たす条件がわかった
+- その条件を満たすテストを書いた
+- シンプルな実装を行った
+- すぐにリファクタリングを行うのではなく、もう一つテストを書いた。
+- ２つのテストを同時に通すリファクタリングを行った。
