--- a/src/test/Act4/第四章 意図を語るテスト.md
+++ b/src/test/Act4/第四章 意図を語るテスト.md
@@ -1,2 +1,36 @@
 # 意図を語るテスト
 
+前章でValue Objectの等価性が担保でき、テストの確度が増した。
+
+## テストの修正
+
+`MoneyTest`では元々、
+
+```
+assertEquals(10, product.amount);
+```
+と、整数同士を比べるコードを書いていたが、ValueObjectを使っているため、\
+オブジェクト同士を比べるコードにしたほうがわかりやすそうだ
+
+```
+assertEquals(new Dollar(10), five.times(2));
+```
+
+## 修正による変化
+
+テストの意図がより分かりやすくなった。\
+また、`amount`がオブジェクト内のみで使われるようになり、privateにしてカプセル化できた。
+
+## TDDにおけるリスク
+
+この章の変更により、一つのリスクを負うことになる。\
+それは、*等価性比較が正しくなかった場合、関係するコード全てが正しくないことになる*というリスクである。
+
+- 完璧を求めるのではなく、コードとテストにより欠陥を減らす事を考える
+
+## やったこと
+
+- 作成したばかりの機能を使ってテストを改善した。
+- そもそも正しく検証できていないテストが２つあったらお手上げだと気づいた
+- そのリスクを受け入れて先に進んだ
+- value objectを駆使し、テストコードとプロダクトコードの結合度を下げた
