ドキュメント整備（一章）

--- a/src/test/Act5/第五章 原則をあえて破るとき.md
+++ b/src/test/Act5/第五章 原則をあえて破るとき.md
@@ -1,7 +1,29 @@
 # 原則をあえて破るとき
 
-今回DollarをコピーしてFrancを作った。
+多国通貨の実装をするため、Dollarを元にFrancを作る必要がある。
 
-本来なら双方の抽象クラスを作り、重複をなくすべきだが、TDDに置いてはまず罪を犯しても動くコードを書くことが重要
+→まずはDollarのテストを元にFrancのテストを作る
 
-その後それをきれいにする。
+## 良い設計の原則を破る
+
+今回DollarクラスをコピペしてFrancクラスを作成した。\
+コピペによる再利用は設計において悪であり、抽象化の敗北では？という声がある。
+
+ここでTDDのサイクルを思い出そう
+
+1. テストを書く
+2. コンパイラを通す
+3. テストを走らせ、失敗を確認する
+4. テストを通す
+5. 重複を排除する
+
+1~3までの３つのフェーズに関してはできるだけ早く進め、新しい機能の状態を確認したい。\
+良い設計の原則を無視していいという免罪符ではなく、重複の排除まで通して罪を贖うことが重要。
+
+
+## やったこと
+
+- 大きいテストに立ち向かうには早かったので次の一歩を踏み出すために小さなテストを作った
+- 既存のテストをコピペしてテストを作成した
+- 既存のモデルコードをコピペしてテストを通した
+- この重複を解消するまでは家に帰らないと決めた
